tests/positive/MultiParams.juvix
module MultiParams;

type Multi (A B C : Type) := mult : Multi A B C;

open Multi using {mult} public;

type T := t;

open T using {t} public;

open T public;

f : {A B : Type} → (C : Type) → {D E F : Type} → Type → T
  | C _ := t;

g : {A B : Type} → (C : Type) → {D _ F : Type} → Type → T
  | C _ := t;
